--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,4 +73,4 @@ jobs:
       run: isort --check-only --diff src/ tests/
     
     - name: Type checking with mypy
-      run: mypy src/ --ignore-missing-imports
+      run: mypy src/ --ignore-missing-imports --explicit-package-bases
