--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,41 @@
 # Ignore agentic-project-management and chatmodes folders
 agentic-project-management/
 chatmodes/
-prompts/
+
+# Output files
+outputs/
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.svg
+*.pdf
+
+# System files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# Log files
+*.log
+logs/*.log
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
