Finalize documentation, user guide, comprehensive testing, and coverage expansion. Update Memory Bank milestones.

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,22 @@ TBOT_TEST_MODE=1
 TBOT_LOG_LEVEL=INFO
 TBOT_LOG_FILE=logs/trading_bot.log
 
+# Detailed Logging Configuration
+LOG_LEVEL=INFO
+LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+LOG_TO_CONSOLE=true
+LOG_TO_FILE=true
+LOG_FILE_MAX_SIZE=10485760
+LOG_FILE_BACKUP_COUNT=5
+
+# Module-specific Log Levels (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+LOG_LEVEL_BACKTESTING=INFO
+LOG_LEVEL_AGENTS=INFO
+LOG_LEVEL_DATA=WARNING
+LOG_LEVEL_VISUALIZATION=WARNING
+LOG_LEVEL_CLI=INFO
+TBOT_LOG_FILE=logs/trading_bot.log
+
 # ================================
 # Data Provider Settings
 # ================================
@@ -77,3 +93,64 @@ CACHE_DIR=cache/
 OPENAI_TEMPERATURE=0.1
 OPENAI_MAX_TOKENS=500
 OPENAI_TOP_P=1.0
+
+# ================================
+# Backtesting Scenarios
+# ================================
+
+# Bull Market Scenario
+BULL_MARKET_START=2020-03-01
+BULL_MARKET_END=2021-12-31
+BULL_MARKET_CAPITAL=10000.0
+BULL_MARKET_DESCRIPTION=Bull market recovery period
+
+# Bear Market Scenario  
+BEAR_MARKET_START=2022-01-01
+BEAR_MARKET_END=2022-12-31
+BEAR_MARKET_CAPITAL=10000.0
+BEAR_MARKET_DESCRIPTION=Bear market correction period
+
+# Sideways Market Scenario
+SIDEWAYS_MARKET_START=2019-01-01
+SIDEWAYS_MARKET_END=2019-12-31
+SIDEWAYS_MARKET_CAPITAL=10000.0
+SIDEWAYS_MARKET_DESCRIPTION=Sideways/consolidation period
+
+# ================================
+# Environment Configurations
+# ================================
+
+# Current Environment (development/staging/production)
+ENVIRONMENT=development
+
+# Development Environment Settings
+DEV_DATA_SOURCE=yahoo
+DEV_CACHE_ENABLED=true
+DEV_DEBUG_MODE=true
+
+# Staging Environment Settings
+STAGING_DATA_SOURCE=yahoo
+STAGING_CACHE_ENABLED=true
+STAGING_DEBUG_MODE=false
+
+# Production Environment Settings
+PROD_DATA_SOURCE=premium_api
+PROD_CACHE_ENABLED=false
+PROD_DEBUG_MODE=false
+
+# ================================
+# Agent Workflow Configurations
+# ================================
+
+# Conservative Strategy
+CONSERVATIVE_SIGNAL_CONFIRMATION_STEPS=3
+CONSERVATIVE_RISK_MANAGEMENT=strict
+CONSERVATIVE_POSITION_SIZING=kelly_criterion
+
+# Aggressive Strategy
+AGGRESSIVE_SIGNAL_CONFIRMATION_STEPS=1
+AGGRESSIVE_RISK_MANAGEMENT=moderate
+AGGRESSIVE_POSITION_SIZING=fixed_percentage
+
+# Active Strategy (default: conservative or aggressive)
+ACTIVE_STRATEGY=conservative
